# Stock-IMS

./: .gitignore  GoogleService-Info.plist  Jewelry 23.04.26.xlsx  README.md  app_config.json  main.js  package-lock.json  package.json  preload.js
.github/workflows/: release.yml
jewel_excel/: jewelry_latest_price_2026-06-28.xlsx
renderer/: index.html
renderer/css/: custom.css  style.css
renderer/js/: app.js  calc.js  catalog.js  db-manager.js  emerald-dashboard.js  emerald-sales.js  emerald.js  image-editor.js  jewel-stone-memo.js  jewelry-memo.js  logs.js  memo.js  settings.js  startup.js  stone-memo.js  stone.js  tauri-shim.js  ui.js
scripts/: ios-dev.sh  release.sh  sign-android.sh  sync-version.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-db-commands.toml
src-tauri/src/: db.rs  lib.rs
