[package]
name = "mava-gems-stock"
version = "7.2.0"
description = "Premium, secure desktop stock management for jewelry inventory."
authors = ["Antigravity"]
license = "ISC"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
rfd = "0.15"

# ── Build profiles ────────────────────────────────────────────────────────────
# "thin" LTO is much faster to link than "fat" (the rustc default for release)
# while still delivering meaningful dead-code elimination.
# Raising codegen-units lets the 4-core Windows runner parallelize compilation.
[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 3
strip = true   # strip debug symbols → smaller binary, faster artifact upload
